--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
                         <ul role="menu" class="dropdown-menu">
                             <li>@Html.ActionLink("Contacts", "Contacts", "Admin")</li>
                             <li>@Html.ActionLink("Recover Deleted Moves", "RecoverDeletedMoves", "Admin")</li>
+                            <li>@Html.ActionLink("Equipment", "Equipment", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
