--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -88,6 +88,7 @@
                             <li>@Html.ActionLink("Waste Class", "WasteClass", "Admin")</li>
                             <li>@Html.ActionLink("Recover Deleted Moves", "RecoverDeletedMoves", "Admin")</li>
                             <li>@Html.ActionLink("Equipment", "Equipment", "Admin")</li>
+                            <li>@Html.ActionLink("Product Master", "ProductMaster", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
