Product Master List

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -89,6 +89,7 @@
                             <li>@Html.ActionLink("Recover Deleted Moves", "RecoverDeletedMoves", "Admin")</li>
                             <li>@Html.ActionLink("Equipment", "Equipment", "Admin")</li>
                             <li>@Html.ActionLink("Product Master", "ProductMaster", "Admin")</li>
+                            <li>@Html.ActionLink("Products", "ProductMasterIndex", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
