Admin User Profile Grid

--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
                             <li>@Html.ActionLink("Equipment", "Equipment", "Admin")</li>
                             <li>@Html.ActionLink("Product Master", "ProductMaster", "Admin")</li>
                             <li>@Html.ActionLink("Products", "ProductMasterIndex", "Admin")</li>
+                            <li>@Html.ActionLink("User Profile", "UserProfile", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
