Edit User Profile html mark up

--- a/DOWTank/Views/Admin/UserProfile.cshtml
+++ b/DOWTank/Views/Admin/UserProfile.cshtml
@@ -76,8 +76,12 @@
 <div class="well well-lg">
     <!--title-->
     <div class="row">
-        <div class="col-md-12 nopadding">
+        <div class="col-md-2">
             <h4 class="dow-color col-md-12">User Profile</h4>
+        </div>
+        <div class="col-md-2">
+            <p></p>
+            @Html.ActionLink("Add New User Profile", "SecurityProfile", "Admin", null, new { @class = "mt20" })
         </div>
     </div>
     <!--list-->
