--- a/DOWTank/Views/Admin/SecurityProfile.cshtml
+++ b/DOWTank/Views/Admin/SecurityProfile.cshtml
@@ -7,7 +7,14 @@
     <!--title-->
     <div class="row">
         <div class="col-md-12 nopadding">
-            <h4 class="dow-color col-md-6">Edit User Profile</h4>
+            @if (Model.Id == 0)
+            {
+                   <h4 class="dow-color col-md-6">Add User Profile</h4>
+            }
+            else
+            {
+                <h4 class="dow-color col-md-6">Edit User Profile</h4>
+            }
         </div>
     </div>
     @using (Html.BeginForm("SecurityProfile", "Admin", FormMethod.Post))
