--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -91,6 +91,7 @@
                             <li>@Html.ActionLink("Product Master", "ProductMaster", "Admin")</li>
                             <li>@Html.ActionLink("Products", "ProductMasterIndex", "Admin")</li>
                             <li>@Html.ActionLink("User Profile", "UserProfile", "Admin")</li>
+                            <li>@Html.ActionLink("User Profile", "UserIndex", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
