--- a/DOWTank/Views/Shared/_Layout.cshtml
+++ b/DOWTank/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link href="@Url.Content("~/Content/css/select2.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/jquery.datetimepicker.css")" rel="stylesheet" />
     <link href="@Url.Content("~/Content/JqGrid/ui.jqgrid.css")" rel="stylesheet" />
-     @RenderSection("head", required: false)
+    @RenderSection("head", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -91,10 +91,11 @@
                             <li>@Html.ActionLink("Product Master", "ProductMaster", "Admin")</li>
                             <li>@Html.ActionLink("Products", "ProductMasterIndex", "Admin")</li>
                             <li>@Html.ActionLink("User Profile", "UserProfile", "Admin")</li>
-                            <li>@Html.ActionLink("User Profile", "UserIndex", "Admin")</li>
+                            <li>@Html.ActionLink("Users", "UserIndex", "Admin")</li>
                         </ul>
                     </li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
