--- a/DOWTank/Views/Tank/Prep.cshtml
+++ b/DOWTank/Views/Tank/Prep.cshtml
@@ -12,6 +12,7 @@
     <input type="hidden" value="@ViewBag.EquipmentAN"  id="hdnEquipmentAN"/>
     @using (Html.BeginForm("Prep", "Tank", FormMethod.Post))
     {
+        @Html.HiddenFor(m => m.TankPrepID)
         if (ViewData.ModelState.Keys.Any(k => ViewData.ModelState[k].Errors.Count() > 0))
         { 
         <div class="alert alert-danger">
@@ -20,6 +21,10 @@
         </div>
         }
         <div class="form-group text-right">
+            @if (Convert.ToBoolean(ViewBag.AllowDelete) && Model.TankPrepID > 0)
+            {
+                <input type="button" value="Delete Prep" class="btn btn-default btn-primary mr5 btnDeletePrep" />
+            }
             <input type="submit" value="Save Prep" class="btn btn-default btn-primary" />
         </div>
         <div class="form-group">
@@ -193,6 +198,10 @@
             <textarea rows="5" cols="20" name="CommentsAn" class="form-control">@Model.CommentsAn</textarea>
         </div>
         <div class="form-group text-right">
+            @if (Convert.ToBoolean(ViewBag.AllowDelete) && Model.TankPrepID > 0)
+            {
+                <input type="button" value="Delete Prep" class="btn btn-default btn-primary mr5 btnDeletePrep" />
+            }
             <input type="submit" value="Save Prep" class="btn btn-default btn-primary mt20" />
         </div>
     }
@@ -203,6 +212,25 @@
 {
 
     <script>
+
+        //delete data
+        $(function () {
+            $(".btnDeletePrep").click(function () {
+                $.ajax({
+                    url: "/Tank/DeletePrep",
+                    dataType: 'json',
+                    method: 'POST',
+                    contentType: 'application/json; charset=utf-8',
+                    data: { TankPrepID: $("#TankPrepID").val() },
+                    success: function (response) {
+                        if (response && response.length > 0) {
+                            console.log('response.id ' + response[0].id);
+                            $("#ddlTankNumber").select2("data", { id: response[0].id, text: response[0].text });
+                        }
+                    }
+                });
+            });
+        });
 
         //datetimepicker
         $(function () {
@@ -401,7 +429,7 @@
 
 
         //load tank number
-        $(function() {
+        $(function () {
 
             var equipmentAn = $("#hdnEquipmentAN").val();
             loadTankNumber(equipmentAn);
